--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.des">
+    package="td.webuild.des">
+
+    <queries>
+        <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
+    </queries>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
    <application
         android:label="des"
         android:name="${applicationName}"
@@ -30,5 +38,34 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!--Google Map-->
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyD-pkE26l2sWEU_CrbDz6b2myMe5Ab7jJo"/>
+        <!--Google Map-->
+
+        <!-- Facebook Login configuration -->
+       <meta-data
+           android:name="com.facebook.sdk.ApplicationId"
+           android:value="@string/facebook_app_id" />
+       <meta-data 
+           android:name="com.facebook.sdk.ClientToken" 
+           android:value="@string/facebook_client_token"/>
+
+        <!-- [START fcm_default_channel] -->
+        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="webuild"/>
+        <!-- [END fcm_default_channel] -->
+
+        <activity android:name="com.facebook.FacebookActivity" android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation" android:label="@string/app_name" android:exported="true" />
+        <activity android:name="com.facebook.CustomTabActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+        <!-- Facebook Login configuration -->
+
     </application>
 </manifest>
