--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,14 +43,14 @@ dependencies:
   crypto: ^3.0.1
   dio: ^4.0.4
   firebase_auth: ^4.2.5
-  firebase_core: ^2.4.1
+  firebase_core: ^2.7.0
   firebase_core_platform_interface: ^4.5.2
   firebase_messaging: ^14.2.1
   flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
   flutter_datetime_picker: ^1.5.1
   flutter_downloader: ^1.7.1
-  flutter_facebook_auth: ^5.0.7
+  flutter_facebook_auth: ^4.4.1+1
   flutter_html: ^2.2.1
   flutter_line_sdk: ^2.2.0
   flutter_local_notifications: ^10.0.0-dev.1
