--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_clean_calendar: ^1.1.0
   flutter_datetime_picker: ^1.5.1
   flutter_downloader: ^1.7.1
-  flutter_facebook_auth: ^4.4.1+1
+  flutter_facebook_auth: ^5.0.7
   flutter_html: ^2.2.1
   flutter_line_sdk: ^2.2.0
   flutter_local_notifications: ^10.0.0-dev.1
