--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   fluttertoast: ^8.1.3
   url_launcher: ^6.1.6
   flutter_face_api: ^4.1.1
+  fading_edge_scrollview: ^3.0.0
 
 dev_dependencies:
   flutter_test:
