--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   flutter_svg: ^0.23.0+1
   fw_ticket: ^0.1.1
-  # geocoder: ^0.2.1
+  geocoding: ^2.1.0
   geolocator: ^9.0.2
   google_maps_flutter: ^2.1.1
   google_sign_in: ^5.4.2
