--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Des</string>
+	<string>Des ดิจิทัลชุมชน</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -42,7 +42,7 @@
 	<key>FacebookClientToken</key>
 	<string>ee1ee427dde4e9522960c88cb9f33f86</string>
 	<key>FacebookDisplayName</key>
-	<string>DES ดิจิตอลชุมชน</string>
+	<string>DES ดิจิทัลชุมชน</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
@@ -64,19 +64,19 @@
 		<true/>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Music Usage</string>
+	<string>DES ดิจิทัลชุมชน Music Usage</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Bluetool Usage</string>
+	<string>DES ดิจิทัลชุมชน Bluetool Usage</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน BluetoothPeripheral</string>
+	<string>DES ดิจิทัลชุมชน BluetoothPeripheral</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Calendar Usage</string>
+	<string>DES ดิจิทัลชุมชน Calendar Usage</string>
 	<key>NSCameraUsageDescription</key>
 	<string>เพื่อแสดงรูปภาพโปรไฟล์ของคุณ</string>
 	<key>NSContactsUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน ต้องการเข้าถึงข้อมูลการติดต่อของคุณ</string>
+	<string>DES ดิจิทัลชุมชน ต้องการเข้าถึงข้อมูลการติดต่อของคุณ</string>
 	<key>NSFaceIDUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน FaceID Usage</string>
+	<string>DES ดิจิทัลชุมชน FaceID Usage</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>เพื่อแสดงตำแหน่งปัจจุบันของคุณ และแนะนำสถานที่น่าสนใจให้กับคุณ</string>
 	<key>NSLocationUsageDescription</key>
@@ -84,21 +84,21 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>เพื่อแสดงตำแหน่งปัจจุบันของคุณ และแนะนำสถานที่น่าสนใจให้กับคุณ</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Microphone Usage</string>
+	<string>DES ดิจิทัลชุมชน Microphone Usage</string>
 	<key>NSMotionUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Motion Usage</string>
+	<string>DES ดิจิทัลชุมชน Motion Usage</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>เพื่อแสดงรูปภาพโปรไฟล์ของคุณ</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>เพื่อแสดงรูปภาพโปรไฟล์ของคุณ</string>
 	<key>NSRemindersUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Reminder Usage</string>
+	<string>DES ดิจิทัลชุมชน Reminder Usage</string>
 	<key>NSSiriUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Siri Usage</string>
+	<string>DES ดิจิทัลชุมชน Siri Usage</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Speech Recognition Usage</string>
+	<string>DES ดิจิทัลชุมชน Speech Recognition Usage</string>
 	<key>NSVideoSubscriberAccountUsageDescription</key>
-	<string>DES ดิจิตอลชุมชน Video Subscribe Usage</string>
+	<string>DES ดิจิทัลชุมชน Video Subscribe Usage</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
@@ -135,6 +135,6 @@
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
 	<key>kTCCServiceMediaLibrary</key>
-	<string>DES ดิจิตอลชุมชน MediaLibrary Usage</string>
+	<string>DES ดิจิทัลชุมชน MediaLibrary Usage</string>
 </dict>
 </plist>
