--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cupertino_stepper: ^0.2.1
   crypto: ^3.0.1
   dio: ^4.0.4
+  fading_edge_scrollview: ^3.0.0
   firebase_auth: ^4.2.5
   firebase_core: ^2.7.0
   firebase_core_platform_interface: ^4.5.2
@@ -50,6 +51,7 @@ dependencies:
   flutter_clean_calendar: ^1.1.0
   flutter_datetime_picker: ^1.5.1
   flutter_downloader: ^1.7.1
+  flutter_face_api: ^4.1.1
   flutter_facebook_auth: ^4.4.1+1
   flutter_html: ^2.2.1
   flutter_line_sdk: ^2.2.0
@@ -58,7 +60,9 @@ dependencies:
   flutter_pretty_dio_logger: ^2.0.3
   flutter_secure_storage: ^7.0.1
   flutter_slidable: ^2.0.0
+  flutter_share: ^2.0.0
   flutter_svg: ^0.23.0+1
+  fluttertoast: ^8.1.3
   fw_ticket: ^0.1.1
   geocoding: ^2.1.0
   geolocator: ^9.0.2
@@ -85,11 +89,8 @@ dependencies:
   syncfusion_flutter_charts: ^20.4.49
   tab_indicator_styler: ^2.0.0
   table_calendar: ^3.0.3
-  fluttertoast: ^8.1.3
   url_launcher: ^6.1.6
-  flutter_face_api: ^4.1.1
-  fading_edge_scrollview: ^3.0.0
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
