--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_core: ^2.7.0
   firebase_core_platform_interface: ^4.5.2
   firebase_messaging: ^14.2.1
+  flex_color_scheme: ^6.1.2
   flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
   flutter_datetime_picker: ^1.5.1
