--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ dependencies:
   package_info: ^2.0.2
   path_provider: ^2.0.8
   permission_handler: ^10.2.0
+  pin_code_fields: ^7.4.0
   photo_view: ^0.14.0
   pull_to_refresh: ^2.0.0
   qr_flutter: ^4.0.0
