--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,9 @@ dependencies:
   tab_indicator_styler: ^2.0.0
   table_calendar: ^3.0.3
   url_launcher: ^6.1.6
+  shared_preferences: ^2.2.2
+  jwt_decoder: ^2.0.1
+  uni_links: ^0.5.1
   
 dev_dependencies:
   flutter_test:
