--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
   uni_links: ^0.5.1
+  flutter_inappwebview: ^5.7.2+3
   
 dev_dependencies:
   flutter_test:
