--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
   crypto: ^3.0.1
   dio: ^4.0.4
   fading_edge_scrollview: ^3.0.0
-  firebase_auth: ^4.2.5
-  firebase_core: ^2.14.0
-  firebase_core_platform_interface: ^4.5.1
-  firebase_messaging: ^14.2.1
+  firebase_auth: ^3.3.8
+  firebase_core: ^1.12.0
+  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^11.2.7
   flex_color_scheme: ^6.1.2
   flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
@@ -55,7 +55,8 @@ dependencies:
   flutter_face_api: ^4.1.1
   flutter_facebook_auth: ^4.4.1+1
   flutter_html: ^2.2.1
-  flutter_line_sdk: ^2.2.0
+  flutter_inappwebview: ^5.7.2+3
+  flutter_line_sdk: ^2.3.6
   flutter_local_notifications: ^9.1.5
   flutter_picker: ^2.0.2
   flutter_pretty_dio_logger: ^2.0.3
@@ -73,6 +74,7 @@ dependencies:
   image_picker: ^0.8.4+4
   intl: ^0.17.0
   json_annotation: ^4.4.0
+  jwt_decoder: ^2.0.1
   loading: ^1.0.2
   location: ^4.3.0
   logger: ^1.3.0
@@ -88,16 +90,14 @@ dependencies:
   qr_flutter: ^4.0.0
   # qualtrics_digital_flutter_plugin: ^1.0.0
   share: ^2.0.4
+  shared_preferences: ^2.2.2
   sign_in_with_apple: ^4.1.0
   sliding_up_panel: ^2.0.0+1
   syncfusion_flutter_charts: ^20.4.49
   tab_indicator_styler: ^2.0.0
   table_calendar: ^3.0.3
-  url_launcher: ^6.1.6
-  shared_preferences: ^2.2.2
-  jwt_decoder: ^2.0.1
   uni_links: ^0.5.1
-  flutter_inappwebview: ^5.7.2+3
+  url_launcher: ^6.1.6
   
 dev_dependencies:
   flutter_test:
