--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
    <application
-        android:label="DCC"
+        android:label="DCC Platform"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
