--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.0.4+6
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -70,12 +70,12 @@ dependencies:
   geolocator: ^9.0.2
   google_maps_flutter: ^2.1.1
   google_sign_in: ^5.4.2
+  get: ^4.6.1
   http: ^0.13.4
   image_picker: ^0.8.4+4
   intl: ^0.17.0
   json_annotation: ^4.4.0
   jwt_decoder: ^2.0.1
-  loading: ^1.0.2
   location: ^4.3.0
   logger: ^1.3.0
   modal_bottom_sheet: 3.0.0-pre
