--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4+6
+version: 1.0.5+7
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -96,6 +96,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.4.49
   tab_indicator_styler: ^2.0.0
   table_calendar: ^3.0.3
+  twitter_login: ^4.3.2
   uni_links: ^0.5.1
   url_launcher: ^6.1.6
   
