--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,7 @@ dependencies:
   twitter_login: ^4.3.2
   uni_links: ^0.5.1
   url_launcher: ^6.1.6
+  webview_flutter: ^2.0.13
   
 dev_dependencies:
   flutter_test:
