--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   uni_links: ^0.5.1
   url_launcher: ^6.1.6
   webview_flutter: ^2.0.13
+  connectivity_plus: ^3.0.6
   
 dev_dependencies:
   flutter_test:
