--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,7 +30,7 @@ flutter_ios_podfile_setup
 target 'Runner' do
   use_frameworks!
   use_modular_headers!
-
+  source 'https://github.com/CocoaPods/Specs.git'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
