change booking design

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -134,5 +134,7 @@
 	<true/>
 	<key>kTCCServiceMediaLibrary</key>
 	<string>DCC Platform MediaLibrary Usage</string>
+	<key>EnableBackgroundLocationUpdates</key>
+  	<true/>
 </dict>
 </plist>
