--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -136,6 +136,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/images/2024/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
