--- a/ios/Podfile
+++ b/ios/Podfile
@@ -28,8 +28,13 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  use_frameworks!
+  use_frameworks! :linkage => :static
   use_modular_headers!
+
+  # ปรับการตั้งค่า Modular Headers ของ Firebase
+  pod 'Firebase/Core', :modular_headers => true
+  pod 'Firebase/Messaging', :modular_headers => true
+  
   source 'https://github.com/CocoaPods/Specs.git'
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
