--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
   crypto: ^3.0.1
   dio: ^4.0.4
   fading_edge_scrollview: ^3.0.0
-  firebase_auth: ^3.3.8
-  firebase_core: ^1.12.0
-  firebase_core_platform_interface: 4.5.1
-  firebase_messaging: ^11.2.7
+  firebase_auth: ^4.6.0  # อัปเดตเป็นเวอร์ชันที่เข้ากับ firebase_core
+  firebase_core: ^2.4.1  # คงเวอร์ชันนี้ไว้
+  firebase_core_platform_interface: ^4.8.0  # คงเวอร์ชันนี้ไว้
+  firebase_messaging: ^14.2.5  # ใช้เวอร์ชันนี้
   flex_color_scheme: ^6.1.2
   flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
@@ -55,7 +55,7 @@ dependencies:
   flutter_face_api: ^4.1.1
   flutter_facebook_auth: ^4.4.1+1
   flutter_html: ^2.2.1
-  flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview: ^6.0.0
   flutter_line_sdk: ^2.3.6
   flutter_local_notifications: ^9.1.5
   flutter_picker: ^2.0.2
