--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.6+18
+version: 1.1.7+21
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -55,7 +55,7 @@ dependencies:
   flutter_face_api: ^4.1.1
   flutter_facebook_auth: ^4.4.1+1
   flutter_html: ^2.2.1
-  flutter_inappwebview: ^6.0.0
+  flutter_inappwebview: ^5.7.2+3
   flutter_line_sdk: ^2.3.6
   flutter_local_notifications: ^9.1.5
   flutter_picker: ^2.0.2
