--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+25
+version: 1.2.2+27
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -36,42 +36,40 @@ dependencies:
   # apple_sign_in: ^0.1.0
   badges: ^3.1.1
   camera: ^0.10.3
-  cached_network_image: ^3.2.3
-  carousel_slider: ^4.0.0
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.4
   cupertino_stepper: ^0.2.1
   crypto: ^3.0.1
   dio: ^4.0.4
-  fading_edge_scrollview: ^3.0.0
+  fading_edge_scrollview: ^4.1.1
   firebase_auth: ^4.6.0  # อัปเดตเป็นเวอร์ชันที่เข้ากับ firebase_core
   firebase_core: ^2.4.1  # คงเวอร์ชันนี้ไว้
   firebase_core_platform_interface: ^4.8.0  # คงเวอร์ชันนี้ไว้
   firebase_messaging: ^14.2.5  # ใช้เวอร์ชันนี้
-  flex_color_scheme: ^6.1.2
+  flex_color_scheme: ^8.2.0
   flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
-  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker_plus: ^2.2.0
   flutter_downloader: ^1.7.1
   flutter_face_api: ^4.1.1
   flutter_facebook_auth: ^4.4.1+1
-  flutter_html: ^2.2.1
-  flutter_inappwebview: ^5.7.2+3
+  flutter_html: ^3.0.0-beta.2
+  flutter_inappwebview: ^6.1.5
   flutter_line_sdk: ^2.3.6
-  flutter_local_notifications: ^9.1.5
+  flutter_local_notifications: ^19.0.0
   flutter_picker: ^2.0.2
   flutter_pretty_dio_logger: ^2.0.3
   flutter_secure_storage: ^7.0.1
   flutter_slidable: ^2.0.0
   flutter_share: ^2.0.0
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^2.0.17
   fluttertoast: ^8.1.3
-  fw_ticket: ^0.1.1
   geocoding: ^2.1.0
   geolocator: ^9.0.2
   google_maps_flutter: ^2.1.1
   google_sign_in: ^6.1.4
-  get: ^4.6.1
-  http: ^0.13.4
+  get: ^4.7.2
+  http: ^1.3.0
   image_picker: ^0.8.4+4
   intl: ^0.17.0
   json_annotation: ^4.4.0
@@ -83,12 +81,11 @@ dependencies:
   package_info: ^2.0.2
   path_provider: ^2.0.8
   permission_handler: ^10.2.0
-  pin_code_fields: ^7.4.0
+  pin_code_fields: ^8.0.1
   photo_view: ^0.14.0
   provider: ^6.0.5
   pull_to_refresh: ^2.0.0
   qr_flutter: ^4.0.0
-  # qualtrics_digital_flutter_plugin: ^1.0.0
   share: ^2.0.4
   shared_preferences: ^2.2.2
   sign_in_with_apple: ^4.1.0
