--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '2.2.0'
+  
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:8.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
@@ -16,6 +17,17 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+
+        
+    }
+}
+
+// Force all Kotlin versions to use the same version
+configurations.all {
+    resolutionStrategy {
+        force "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        force "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+        force "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     }
 }
 
@@ -28,5 +40,5 @@ subprojects {
 }
 
 tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+    delete rootProject.layout.buildDirectory
 }
