--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,10 @@ dependencies:
   crypto: ^3.0.1
   dio: ^4.0.4
   fading_edge_scrollview: ^4.1.1
-  firebase_auth: ^4.6.0  # อัปเดตเป็นเวอร์ชันที่เข้ากับ firebase_core
-  firebase_core: ^2.4.1  # คงเวอร์ชันนี้ไว้
-  firebase_core_platform_interface: ^4.8.0  # คงเวอร์ชันนี้ไว้
-  firebase_messaging: ^14.2.5  # ใช้เวอร์ชันนี้
+  firebase_auth: ^6.0.0  
+  firebase_core: ^4.0.0
+  firebase_messaging: ^16.0.0
   flex_color_scheme: ^8.2.0
-  flutter_app_badger: ^1.3.0
   flutter_clean_calendar: ^1.1.0
   flutter_datetime_picker_plus: ^2.2.0
   flutter_downloader: ^1.7.1
@@ -55,17 +53,18 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   flutter_inappwebview: ^6.1.5
   flutter_line_sdk: ^2.6.1
-  flutter_local_notifications: ^19.0.0
+  flutter_local_notifications: ^19.4.0
   flutter_picker: ^2.0.2
   flutter_pretty_dio_logger: ^2.0.3
   flutter_secure_storage: ^9.2.4
   flutter_slidable: ^2.0.0
-  flutter_share: ^2.0.0
+
+  
   flutter_svg: ^2.0.17
   fluttertoast: ^8.1.3
   geocoding: ^2.1.0
-  geolocator: ^9.0.2
-  google_maps_flutter: ^2.1.1
+  geolocator: ^14.0.2
+  google_maps_flutter: ^2.12.3
   google_sign_in: ^6.1.4
   get: ^4.7.2
   http: ^1.3.0
@@ -73,31 +72,35 @@ dependencies:
   intl: ^0.17.0
   json_annotation: ^4.4.0
   jwt_decoder: ^2.0.1
-  location: ^4.3.0
+  location: ^8.0.1
   logger: ^1.3.0
   modal_bottom_sheet: 3.0.0-pre
   numeric_keyboard: ^1.1.0
-  package_info: ^2.0.2
+
   path_provider: ^2.0.8
-  permission_handler: ^10.2.0
+  permission_handler: ^12.0.1
   pin_code_fields: ^8.0.1
   photo_view: ^0.14.0
   provider: ^6.0.5
   pull_to_refresh: ^2.0.0
   qr_flutter: ^4.0.0
-  share: ^2.0.4
+
   shared_preferences: ^2.2.2
-  sign_in_with_apple: ^4.1.0
+  sign_in_with_apple: ^7.0.1
   sliding_up_panel: ^2.0.0+1
   syncfusion_flutter_charts: ^20.4.49
   tab_indicator_styler: ^2.0.0
   table_calendar: ^3.0.3
-  twitter_login: ^4.3.2
-  uni_links: ^0.5.1
+  # twitter_login: ^4.4.2
+  # uni_links: ^0.5.1
   url_launcher: ^6.1.6
-  webview_flutter: ^2.8.0
-  connectivity_plus: ^3.0.6
+  webview_flutter: ^4.13.0
+  connectivity_plus: ^5.0.2
   top_modal_sheet: ^2.1.0
+  share_plus: ^11.0.0
+  package_info_plus: ^8.3.0
+  app_links: ^6.4.0
+  flutter_new_badger: ^1.1.1
 
 dev_dependencies:
   flutter_test:
