--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.2+29
-
+version: 1.2.2+32
 environment:
   sdk: '>=2.19.1 <3.0.0'
 
@@ -101,6 +100,7 @@ dependencies:
   app_links: ^6.4.0
   flutter_new_badger: ^1.1.1
   flutter_widget_from_html: ^0.16.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
